[package]
name = "arulite"
version = "0.1.0"
authors = ["James <jamesschrum9@gmail.com>"]
edition = "2018"

[dependencies]
tiberius = { version = "0.3.2", default-features=false, features=["chrono"] }
bitflags = "1.0"
byteorder = "1.0"
bytes = "0.4.3"
encoding = "0.2"
fnv = "1.0"
lazy_static = "1.0"
futures = "0.1.18" # futures = "0.1.27" # futures-state-stream = "0.2.0"
tokio = "0.1.2" # tokio = "0.1.21"
tokio-core = "0.1.17"
futures-state-stream = "0.1"
chrono = { version = "0.4.0", optional = true }
winauth = { version = "0.0.3" }
native-tls = { version = "0.2.1", optional = true }
tokio-tls = { version = "0.2", optional = true }
