[package]
name = "arulite"
version = "0.1.0"
authors = ["James <jamesschrum9@gmail.com>"]
edition = "2018"

[dependencies]
gtk = "0.6.0"
gio = "0.6.0"
tiberius = { version = "0.3.2", default-features=false, features=["chrono"] }
futures = "0.1.18"
tokio = "0.1.2"
tokio-core = "0.1.17"
tokio-current-thread = "0.1.6"
futures-state-stream = "0.1"
